--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./index.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Karantina:wght@400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jockey One:wght@400&display=swap"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Jockey One:wght@400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Karantina:wght@400&display=swap"
     />
     <link
       rel="stylesheet"
@@ -27,117 +27,149 @@
     <div class="iphone-14-15-pro-1">
       <div class="main">
         <main class="photo-2024-05-22-11-43-31-1-parent">
-          <img
-            class="photo-2024-05-22-11-43-31-1-icon"
-            alt=""
-            src="./public/photo-20240522-114331-1@2x.png"
-          />
-
-          <img
-            class="output-onlinegiftools-1-icon"
-            alt=""
-            src="./public/outputonlinegiftools-1@2x.png"
-          />
+          <section class="photo-2024-05-22-11-43-31-1"></section>
+          <img class="output-onlinegiftools-1-icon" />
         </main>
       </div>
-      <div class="header">
-        <div class="exos-balance">
-          <div class="exos-balance-child"></div>
-          <div class="div">0.0000</div>
-          <img
-            class="business-products-wallet-money-icon"
-            alt=""
-            src="./public/businessproductswalletmoney@2x.png"
-          />
-        </div>
-        <div class="gpus">
-          <div class="gpus-child"></div>
-          <img class="image-1-icon" alt="" src="./public/image-1@2x.png" />
+      <main class="frame">
+        <footer class="footer">
+          <div class="market">
+            <button class="shopping-shipping-cart">
+              <img class="group-icon" alt="" src="./public/group.svg" />
+            </button>
+            <div class="frame1">
+              <div class="frame-child"></div>
+              <div class="market1">Market</div>
+            </div>
+          </div>
+          <div class="friends">
+            <div class="frame2">
+              <div class="friends1">Friends</div>
+            </div>
+            <button class="frame3">
+              <div class="frame-item"></div>
+              <button class="frame4">
+                <img
+                  class="multiple-user-icon"
+                  alt=""
+                  src="./public/multipleuser.svg"
+                />
+              </button>
+            </button>
+          </div>
+          <div class="mine">
+            <button class="frame5">
+              <img class="vector-icon" alt="" src="./public/vector@2x.png" />
+            </button>
+            <div class="frame6">
+              <button class="frame7">
+                <img
+                  class="coding-apps-websites-database-icon"
+                  alt=""
+                  src="./public/codingappswebsitesdatabase@2x.png"
+                />
+              </button>
+              <div class="frame8">
+                <div class="frame-inner"></div>
+                <div class="frame9">
+                  <div class="mine1">Mine</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="home">
+            <div class="frame10">
+              <div class="home1">Home</div>
+            </div>
+            <button class="frame11">
+              <div class="rectangle-div"></div>
+              <button class="frame12">
+                <img
+                  class="computer-old-electronics-icon"
+                  alt=""
+                  src="./public/computeroldelectronics.svg"
+                />
+              </button>
+            </button>
+          </div>
+          <div class="info">
+            <div class="frame13">
+              <div class="info1">Info</div>
+            </div>
+            <div class="frame14">
+              <div class="frame-child1"></div>
+              <img class="frame-icon" alt="" src="./public/frame.svg" />
+            </div>
+          </div>
+        </footer>
+        <section class="frame15">
+          <div class="header">
+            <div class="frame16">
+              <div class="gpus">
+                <div class="gpus-child"></div>
+                <div class="frame17">
+                  <div class="div">0/0</div>
+                  <button class="image-1"></button>
+                </div>
+              </div>
+              <div class="electricity">
+                <div class="electricity-1"></div>
+                <div class="frame18">
+                  <div class="div1">0/100</div>
+                  <button class="electric-generator-2576342-1"></button>
+                </div>
+              </div>
+            </div>
+            <header class="frame19">
+              <div class="frame20">
+                <div class="tonbalance">
+                  <button class="tonbalance-child"></button>
+                  <div class="frame21">
+                    <img
+                      class="vector-icon1"
+                      alt=""
+                      src="./public/vector@2x.png"
+                    />
 
-          <div class="div1">0/0</div>
-        </div>
-        <div class="electricity">
-          <div class="electricity-1"></div>
-          <img
-            class="electric-generator-2576342-1-icon"
-            alt=""
-            src="./public/electricgenerator-2576342-1@2x.png"
-          />
+                    <div class="div2">0.000</div>
+                    <img
+                      class="vector-icon2"
+                      alt=""
+                      src="./public/vector@2x.png"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="frame22">
+                <div class="frame23">
+                  <button class="exos-balance">
+                    <div class="exos-balance-child"></div>
+                    <div class="frame24">
+                      <div class="div3">0.0000</div>
+                      <img
+                        class="business-products-wallet-money-icon"
+                        alt=""
+                        src="./public/businessproductswalletmoney@2x.png"
+                      />
+                    </div>
+                  </button>
+                </div>
+                <div class="hmara">
+                  <img
+                    class="hmara-1-icon"
+                    alt=""
+                    src="./public/hmara-1@2x.png"
+                  />
 
-          <div class="div2">0/100</div>
-        </div>
-        <div class="tonbalance">
-          <img
-            class="tonbalance-child"
-            alt=""
-            src="./public/rectangle-4@2x.png"
-          />
-
-          <img class="vector-icon" alt="" src="./public/vector.svg" />
-
-          <img class="vector-icon1" alt="" src="./public/vector1.svg" />
-
-          <div class="div3">0.000</div>
-        </div>
-        <div class="hmara">
-          <img class="hmara-1-icon" alt="" src="./public/hmara-1@2x.png" />
-
-          <h1 class="level-1">Level 1</h1>
-        </div>
-      </div>
-      <footer class="footer">
-        <div class="friends">
-          <div class="friends-child"></div>
-          <div class="friends1">Friends</div>
-          <img
-            class="multiple-user-icon"
-            alt=""
-            src="./public/multipleuser@2x.png"
-          />
-        </div>
-        <div class="mine">
-          <div class="mine-child"></div>
-          <img class="vector-icon2" alt="" src="./public/vector2@2x.png" />
-
-          <img
-            class="coding-apps-websites-database-icon"
-            alt=""
-            src="./public/codingappswebsitesdatabase@2x.png"
-          />
-
-          <div class="mine1">Mine</div>
-        </div>
-        <div class="home">
-          <div class="home-child"></div>
-          <img
-            class="computer-old-electronics-icon"
-            alt=""
-            src="./public/computeroldelectronics@2x.png"
-          />
-
-          <div class="home1">Home</div>
-        </div>
-        <div class="market">
-          <div class="market-child"></div>
-          <img
-            class="shopping-shipping-cart-icon"
-            alt=""
-            src="./public/shoppingshippingcart@2x.png"
-          />
-
-          <div class="market1">Market</div>
-        </div>
-        <div class="info">
-          <div class="info-child"></div>
-          <img
-            class="interface-essential-informatio-icon"
-            alt=""
-            src="./public/interfaceessentialinformationcircle2.svg"
-          />
-
-          <div class="info1">Info</div>
-        </div>
-      </footer>
+                  <div class="frame25">
+                    <h1 class="level-1">Level 1</h1>
+                  </div>
+                </div>
+              </div>
+            </header>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
