--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   </head>
   <body>
     <div class="iphone-14-15-pro-1">
-      <div class="main">
+      <main class="main">
         <main class="photo-2024-05-22-11-43-31-1-parent">
           <section class="photo-2024-05-22-11-43-31-1"></section>
           <img class="output-onlinegiftools-1-icon" />
         </main>
-      </div>
+      </main>
       <main class="frame">
         <footer class="footer">
           <div class="market">
@@ -52,7 +52,7 @@
                 <img
                   class="multiple-user-icon"
                   alt=""
-                  src="./public/multipleuser.svg"
+                  src="./public/multipleuser@2x.png"
                 />
               </button>
             </button>
@@ -87,7 +87,7 @@
                 <img
                   class="computer-old-electronics-icon"
                   alt=""
-                  src="./public/computeroldelectronics.svg"
+                  src="./public/computeroldelectronics@2x.png"
                 />
               </button>
             </button>
@@ -98,53 +98,59 @@
             </div>
             <div class="frame14">
               <div class="frame-child1"></div>
-              <img class="frame-icon" alt="" src="./public/frame.svg" />
+              <button class="frame15">
+                <img
+                  class="interface-essential-informatio-icon"
+                  alt=""
+                  src="./public/interfaceessentialinformationcircle2.svg"
+                />
+              </button>
             </div>
           </div>
         </footer>
-        <section class="frame15">
+        <section class="frame16">
           <div class="header">
-            <div class="frame16">
+            <div class="frame17">
               <div class="gpus">
                 <div class="gpus-child"></div>
-                <div class="frame17">
+                <div class="frame18">
                   <div class="div">0/0</div>
                   <button class="image-1"></button>
                 </div>
               </div>
               <div class="electricity">
                 <div class="electricity-1"></div>
-                <div class="frame18">
+                <div class="frame19">
                   <div class="div1">0/100</div>
                   <button class="electric-generator-2576342-1"></button>
                 </div>
               </div>
             </div>
-            <header class="frame19">
-              <div class="frame20">
+            <header class="frame20">
+              <div class="frame21">
                 <div class="tonbalance">
                   <button class="tonbalance-child"></button>
-                  <div class="frame21">
+                  <div class="frame22">
                     <img
                       class="vector-icon1"
                       alt=""
-                      src="./public/vector@2x.png"
+                      src="./public/vector1@2x.png"
                     />
 
                     <div class="div2">0.000</div>
                     <img
                       class="vector-icon2"
                       alt=""
-                      src="./public/vector@2x.png"
+                      src="./public/vector2@2x.png"
                     />
                   </div>
                 </div>
               </div>
-              <div class="frame22">
-                <div class="frame23">
+              <div class="frame23">
+                <div class="frame24">
                   <button class="exos-balance">
                     <div class="exos-balance-child"></div>
-                    <div class="frame24">
+                    <div class="frame25">
                       <div class="div3">0.0000</div>
                       <img
                         class="business-products-wallet-money-icon"
@@ -161,7 +167,7 @@
                     src="./public/hmara-1@2x.png"
                   />
 
-                  <div class="frame25">
+                  <div class="frame26">
                     <h1 class="level-1">Level 1</h1>
                   </div>
                 </div>
