--- a/index.html
+++ b/index.html
@@ -99,11 +99,13 @@
             <div class="frame14">
               <div class="frame-child1"></div>
               <button class="frame15">
-                <img
-                  class="interface-essential-informatio-icon"
-                  alt=""
-                  src="./public/interfaceessentialinformationcircle2.svg"
-                />
+                <button class="interface-essential-informatio">
+                  <img
+                    class="vector-icon1"
+                    alt=""
+                    src="./public/interfaceessentialinformationcircle2.svg"
+                  />
+                </button>
               </button>
             </div>
           </div>
@@ -132,14 +134,14 @@
                   <button class="tonbalance-child"></button>
                   <div class="frame22">
                     <img
-                      class="vector-icon1"
+                      class="vector-icon2"
                       alt=""
                       src="./public/vector1@2x.png"
                     />
 
                     <div class="div2">0.000</div>
                     <img
-                      class="vector-icon2"
+                      class="vector-icon3"
                       alt=""
                       src="./public/vector2@2x.png"
                     />
